fix: content alignment

--- a/src/components/flow/actions/helpers.module.scss
+++ b/src/components/flow/actions/helpers.module.scss
@@ -12,3 +12,11 @@
   text-underline-offset: 0.1875 * $unnnic-font-size; // 3px
   display: inline-block;
 }
+
+.truncated {
+  display: inline-block;
+  max-width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
