--- a/src/components/flow/actions/sendmsg/SendMsg.module.scss
+++ b/src/components/flow/actions/sendmsg/SendMsg.module.scss
@@ -1,7 +1,8 @@
 @import 'variables.module.scss';
 
 .quick_replies {
-  display: inline-flex;
+  display: flex;
+  flex-wrap: wrap;
   gap: $unnnic-spacing-stack-xs $unnnic-spacing-inline-xs;
 }
 
