--- a/src/components/shared.module.scss
+++ b/src/components/shared.module.scss
@@ -132,9 +132,8 @@
 }
 
 .node_asset {
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
+  display: inherit;
+  max-width: 100%;
   .node_group {
     padding-right: 5px;
   }
